# solis_core

./: CMakeLists.txt  LICENSE
cmake/: arguments.cmake  extras.cmake  package.cmake  solis.cmake  solisConfig.cmake  utils.cmake
include/solis/: solis.hpp
include/solis/resources/: block.hpp
include/solis/utils/: common.hpp  errors.hpp  flags.hpp  output.hpp  static.hpp  types.hpp  zlib.hpp
include/solis/world/: chunk.hpp  coordinates.hpp  dimension.hpp  loader.hpp  typedef.hpp  world.hpp
src/: solis.cpp
src/resources/: block.cpp
src/utils/: u.cpp  zlib.cpp
src/worlds/: dimension.cpp  world.cpp
